# sentan

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  model.joblib  pyproject.toml  test.py
scripts/: app.py  train.py
src/sentan/: data.py  eval.py  model.py  preprocessing.py
